--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <spring.version>4.1.2.RELEASE</spring.version>
     <logback.version>1.1.2</logback.version>
     <slf4j.version>1.7.7</slf4j.version>
+    <poi.version>3.10.1</poi.version>
   </properties>
 
   <dependencies>
@@ -43,6 +44,18 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>${poi.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>${poi.version}</version>
     </dependency>
   </dependencies>
 
