--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <logback.version>1.1.2</logback.version>
     <slf4j.version>1.7.7</slf4j.version>
     <poi.version>3.10.1</poi.version>
+    <jfreechart.version>1.0.19</jfreechart.version>
   </properties>
 
   <dependencies>
@@ -56,6 +57,12 @@
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
       <version>${poi.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>${jfreechart.version}</version>
     </dependency>
   </dependencies>
 
