Add IntelliJ GUI Designer package to pom.xml and Modify logging message

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <slf4j.version>1.7.7</slf4j.version>
     <poi.version>3.10.1</poi.version>
     <jfreechart.version>1.0.19</jfreechart.version>
+    <forms_rt.version>7.0.3</forms_rt.version>
   </properties>
 
   <dependencies>
@@ -67,6 +68,13 @@
       <artifactId>jfreechart</artifactId>
       <version>${jfreechart.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.intellij</groupId>
+      <artifactId>forms_rt</artifactId>
+      <version>${forms_rt.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -100,6 +108,23 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>ideauidesigner-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>javac2</goal>
+            </goals>
+          </execution>
+        </executions>
+
+        <configuration>
+          <fork>true</fork>
+          <debug>true</debug>
+          <failOnError>true</failOnError>
+        </configuration>
       </plugin>
     </plugins>
   </build>
